@@ -76,6 +76,7 @@ other_search_rm = function() {
 <form name="search_form" method="post" action="story.pl">
 
 <input name="rm" value="list_retired" type="hidden">
+<input name="searched" value="1" type="hidden">
 <input name="krang_pager_curr_page_num" value="" type="hidden">
 <input name="krang_pager_show_big_view" value="<tmpl_var escape=html krang_pager_show_big_view>" type="hidden">
 <input name="krang_pager_sort_field" value="<tmpl_var escape=html krang_pager_sort_field>" type="hidden">
